# oebc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: develop.yml  main-release.yml  pypi-publish.yml  schema-release.yml
spec/schemas/: oebc-v0.1.json  oebc-v0.1.yaml
src/oebc/: __init__.py  cli.py  fetch.py  generate.py  urls.py
tests/: test_cli.py  test_fetch.py  test_generate.py  test_schema_validation.py  test_version.py
