[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oebc"
# Package version (pip/PyPI). Schema version is tracked separately in spec/VERSION.
version = "0.1.0"
description = "Open Exposure Baseline Catalog — daily CVE exposure baseline enriched with EPSS, KEV, and derived exposure tiers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Karthikeyan Sadayamuthu" }]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "pre-commit>=4.0",
    "jsonschema>=4.0",
    "build>=1.0",
]

[project.scripts]
oebc = "oebc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov=oebc --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["oebc"]
omit = ["*/oebc/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == ['\"]__main__['\"]",
    "pragma: no cover",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["oebc"]
